# mvbb_slicer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: calibration.yaml  rviz.rviz
include/mvbb/: mvbb.h
launch/: mvbb_demo.launch  mvbb_demo_slicer.launch
src/: .mvbb.cpp.kate-swp  main.cpp  mvbb.cpp
